holy balls i spent 12 hours on this today

--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -9354,9 +9354,9 @@
  GLD_neutrality:0 "Golden Horde"
  GLD_neutrality_DEF:0 "Golden Horde"
  GLD_neutrality_ADJ:0 "Golden"
- GLD_authoritarian_monarchism:0 "Ulus of Jochi"
- GLD_authoritarian_monarchism_DEF:0 "Ulus of Jochi"
- GLD_authoritarian_monarchism_ADJ:0 "Golden"
+ GLD_authoritarian_monarchism:0 ""
+ GLD_authoritarian_monarchism_DEF:0 "The Neolithic Urals"
+ GLD_authoritarian_monarchism_ADJ:0 "Uralic"
  GLD_stratocratic:0 "Great State"
  GLD_stratocratic_DEF:0 "Great State"
  GLD_stratocratic_ADJ:0 "Golden"
@@ -11306,9 +11306,9 @@
  KMN_stratocratic:0 "Karamanid Military Junta"
  KMN_stratocratic_DEF:0 "The Karamanid Military Junta"
  KMN_stratocratic_ADJ:0 "Karamanid"
- KMN_authoritarian_monarchism:0 "Sultanate of Rum"
- KMN_authoritarian_monarchism_DEF:0 "The Sultanate of Rum"
- KMN_authoritarian_monarchism_ADJ:0 "Seljuk"
+ KMN_authoritarian_monarchism:0 "Purushanda"
+ KMN_authoritarian_monarchism_DEF:0 "The Purushanda Civilization"
+ KMN_authoritarian_monarchism_ADJ:0 "Purushanda"
  KMN_republican_fascism:0 "Karamanid State"
  KMN_republican_fascism_DEF:0 "The Karamanid State"
  KMN_republican_fascism_ADJ:0 "Karamanid"
@@ -11373,9 +11373,9 @@
  KRS_stratocratic:0 "Karesid Military Junta"
  KRS_stratocratic_DEF:0 "The Karesid Military Junta"
  KRS_stratocratic_ADJ:0 "Karesid"
- KRS_authoritarian_monarchism:0 "Kingdom of Karesi"
- KRS_authoritarian_monarchism_DEF:0 "The Kingdom of Karesi"
- KRS_authoritarian_monarchism_ADJ:0 "Karesid"
+ KRS_authoritarian_monarchism:0 "Kingdom of Wilusa"
+ KRS_authoritarian_monarchism_DEF:0 "The Kingdom of Wilusa"
+ KRS_authoritarian_monarchism_ADJ:0 "Trojan"
  KRS_republican_fascism:0 "Karesid State"
  KRS_republican_fascism_DEF:0 "The Karesid State"
  KRS_republican_fascism_ADJ:0 "Karesid"
@@ -11507,9 +11507,9 @@
  JAN_stratocratic:0 "Jandarid Military Junta"
  JAN_stratocratic_DEF:0 "The Jandarid Military Junta"
  JAN_stratocratic_ADJ:0 "Jandarid"
- JAN_authoritarian_monarchism:0 "Sunbuli Order"
- JAN_authoritarian_monarchism_DEF:0 "The Sunbuli Order"
- JAN_authoritarian_monarchism_ADJ:0 "Sunbuli"
+ JAN_authoritarian_monarchism:0 "Pala"
+ JAN_authoritarian_monarchism_DEF:0 "The Pala Culture"
+ JAN_authoritarian_monarchism_ADJ:0 "Pala"
  JAN_republican_fascism:0 "Jandarid State"
  JAN_republican_fascism_DEF:0 "The Jandarid State"
  JAN_republican_fascism_ADJ:0 "Jandarid"
@@ -11574,9 +11574,9 @@
  GMY_stratocratic:0 "Germiyanid Military Junta"
  GMY_stratocratic_DEF:0 "The Germiyanid Military Junta"
  GMY_stratocratic_ADJ:0 "Germiyanid"
- GMY_authoritarian_monarchism:0 "Afyon Emirate"
- GMY_authoritarian_monarchism_DEF:0 "Afyon Emirate"
- GMY_authoritarian_monarchism_ADJ:0 "Afyon"
+ GMY_authoritarian_monarchism:0 "Hapalla"
+ GMY_authoritarian_monarchism_DEF:0 "The Hapalla Culture"
+ GMY_authoritarian_monarchism_ADJ:0 "Hapalla"
  GMY_republican_fascism:0 "Germiyanid State"
  GMY_republican_fascism_DEF:0 "The Germiyanid State"
  GMY_republican_fascism_ADJ:0 "Germiyanid"
@@ -11641,9 +11641,9 @@
  AYD_stratocratic:0 "Aydinid Military Junta"
  AYD_stratocratic_DEF:0 "The Aydinid Military Junta"
  AYD_stratocratic_ADJ:0 "Aydinid"
- AYD_authoritarian_monarchism:0 "Kingdom of Aydin"
- AYD_authoritarian_monarchism_DEF:0 "The Kingdom of Aydin"
- AYD_authoritarian_monarchism_ADJ:0 "Aydinid"
+ AYD_authoritarian_monarchism:0 "Mira"
+ AYD_authoritarian_monarchism_DEF:0 "The Mira Civilization"
+ AYD_authoritarian_monarchism_ADJ:0 "Mira"
  AYD_republican_fascism:0 "Alevi State"
  AYD_republican_fascism_DEF:0 "The Alevi State"
  AYD_republican_fascism_ADJ:0 "Alevi"
@@ -11711,9 +11711,9 @@
  BUR_neutrality:0 "State of Bursa"
  BUR_neutrality_DEF:0 "The State of Bursa"
  BUR_neutrality_ADJ:0 "Ottoman"
- BUR_authoritarian_monarchism:0 "Sultanate of Hüdavendigar"
- BUR_authoritarian_monarchism_DEF:0 "Sultanate of Hüdavendigar"
- BUR_authoritarian_monarchism_ADJ:0 "Hüdavendigar"
+ BUR_authoritarian_monarchism:0 "Masa"
+ BUR_authoritarian_monarchism_DEF:0 "The Masa Culture"
+ BUR_authoritarian_monarchism_ADJ:0 "Masa"
  BUR_stratocratic:0 "Turkish Government of Bursa"
  BUR_stratocratic_DEF:0 "The Turkish Government of Bursa"
  BUR_stratocratic_ADJ:0 "Turkish"
@@ -11775,9 +11775,9 @@
  SRN_stratocratic:0 "Greek Occupation Zone"
  SRN_stratocratic_DEF:0 "The Greek Zone of Influence"
  SRN_stratocratic_ADJ:0 "Saruhanid"
- SRN_authoritarian_monarchism:0 "Turkish Mahdiyya"
- SRN_authoritarian_monarchism_DEF:0 "The Turkish Mahdiyya"
- SRN_authoritarian_monarchism_ADJ:0 "Turkish Mahdiyya"
+ SRN_authoritarian_monarchism:0 "Seha"
+ SRN_authoritarian_monarchism_DEF:0 "The Seha Civilization"
+ SRN_authoritarian_monarchism_ADJ:0 "Seha"
  SRN_republican_fascism:0 "Saruhanid State"
  SRN_republican_fascism_DEF:0 "The Saruhanid State"
  SRN_republican_fascism_ADJ:0 "Saruhanid"
@@ -11842,9 +11842,9 @@
  MTS_stratocratic:0 "Italian Occupation Zone"
  MTS_stratocratic_DEF:0 "The Italian Zone of Influence"
  MTS_stratocratic_ADJ:0 "Menteshe"
- MTS_authoritarian_monarchism:0 "Kingdom of Menteshe"
- MTS_authoritarian_monarchism_DEF:0 "The Kingdom of Menteshe"
- MTS_authoritarian_monarchism_ADJ:0 "Menteshe"
+ MTS_authoritarian_monarchism:0 "Arzawa"
+ MTS_authoritarian_monarchism_DEF:0 "The Arzawa Civilization"
+ MTS_authoritarian_monarchism_ADJ:0 "Arzawa"
  MTS_republican_fascism:0 "Menteshe State"
  MTS_republican_fascism_DEF:0 "The Menteshe State"
  MTS_republican_fascism_ADJ:0 "Menteshe"
@@ -12043,9 +12043,9 @@
  DLK_stratocratic:0 "Dulkadirid Military Junta"
  DLK_stratocratic_DEF:0 "The Dulkadirid Military Junta"
  DLK_stratocratic_ADJ:0 "Dulkadirid"
- DLK_authoritarian_monarchism:0 "Kingdom of Dulkadir"
- DLK_authoritarian_monarchism_DEF:0 "The Kingdom of Dulkadir"
- DLK_authoritarian_monarchism_ADJ:0 "Dulkadirid"
+ DLK_authoritarian_monarchism:0 "Kizzuwatna"
+ DLK_authoritarian_monarchism_DEF:0 "The Kizzuwatna Civilization"
+ DLK_authoritarian_monarchism_ADJ:0 "Kizzuwatna"
  DLK_republican_fascism:0 "Dulkadirid State"
  DLK_republican_fascism_DEF:0 "The Dulkadirid State"
  DLK_republican_fascism_ADJ:0 "Dulkadirid"
@@ -12110,9 +12110,9 @@
  CNK_stratocratic:0 "Canik Military Junta"
  CNK_stratocratic_DEF:0 "The Canik Military Junta"
  CNK_stratocratic_ADJ:0 "Canik"
- CNK_authoritarian_monarchism:0 "Kingdom of Canik"
- CNK_authoritarian_monarchism_DEF:0 "The Kingdom of Canik"
- CNK_authoritarian_monarchism_ADJ:0 "Canik"
+ CNK_authoritarian_monarchism:0 "Samuha"
+ CNK_authoritarian_monarchism_DEF:0 "The Samuha Civilization"
+ CNK_authoritarian_monarchism_ADJ:0 "Samuha"
  CNK_republican_fascism:0 "Canik State"
  CNK_republican_fascism_DEF:0 "The Canik State"
  CNK_republican_fascism_ADJ:0 "Canik"
@@ -12177,9 +12177,9 @@
  ERE_stratocratic:0 "Eretnid Military Junta"
  ERE_stratocratic_DEF:0 "The Eretnid Military Junta"
  ERE_stratocratic_ADJ:0 "Eretnid"
- ERE_authoritarian_monarchism:0 "Ilkhanate"
- ERE_authoritarian_monarchism_DEF:0 "The Ilkhanate"
- ERE_authoritarian_monarchism_ADJ:0 "Ilkhan"
+ ERE_authoritarian_monarchism:0 "Hatti"
+ ERE_authoritarian_monarchism_DEF:0 "The Hatti Civilization"
+ ERE_authoritarian_monarchism_ADJ:0 "Hatti"
  ERE_republican_fascism:0 "Eretnid State"
  ERE_republican_fascism_DEF:0 "The Eretnid State"
  ERE_republican_fascism_ADJ:0 "Eretnid"
@@ -12247,9 +12247,9 @@
  PON_stratocratic:0 "Pontic Military Junta"
  PON_stratocratic_DEF:0 "The Pontic Military Junta"
  PON_stratocratic_ADJ:0 "Pontic"
- PON_authoritarian_monarchism:0 "Kingdom of Trebizond"
- PON_authoritarian_monarchism_DEF:0 "The Kingdom of Trebizond"
- PON_authoritarian_monarchism_ADJ:0 "Pontic"
+ PON_authoritarian_monarchism:0 "Kaska"
+ PON_authoritarian_monarchism_DEF:0 "The Kaska Tribes"
+ PON_authoritarian_monarchism_ADJ:0 "Kaski"
  PON_republican_fascism:0 "Pontic State"
  PON_republican_fascism_DEF:0 "The Pontic State"
  PON_republican_fascism_ADJ:0 "Pontic"
@@ -15395,9 +15395,9 @@
  DJH_stratocratic:0 "Dojhik Military Junta"
  DJH_stratocratic_DEF:0 "Dojhik Military Junta"
  DJH_stratocratic_ADJ:0 "Dojhik"
- DJH_authoritarian_monarchism:0 "Dojhik Kingdom"
- DJH_authoritarian_monarchism_DEF:0 "Dojhik Kingdom"
- DJH_authoritarian_monarchism_ADJ:0 "Dojhik"
+ DJH_authoritarian_monarchism:0 "Azzi-Hayasa"
+ DJH_authoritarian_monarchism_DEF:0 "The Azzi-Hayasa Culture"
+ DJH_authoritarian_monarchism_ADJ:0 "Azzi-Hayasa"
  DJH_republican_fascism:0 "Greater Dojhik State"
  DJH_republican_fascism_DEF:0 "Greater Dojhik State"
  DJH_republican_fascism_ADJ:0 "Dojhik"
@@ -15663,9 +15663,9 @@
  BTL_stratocratic:0 "Bitlis Military Junta"
  BTL_stratocratic_DEF:0 "Bitlis Military Junta"
  BTL_stratocratic_ADJ:0 "Bitlis"
- BTL_authoritarian_monarchism:0 "Bitlis Kingdom"
- BTL_authoritarian_monarchism_DEF:0 "Bitlis Kingdom"
- BTL_authoritarian_monarchism_ADJ:0 "Bitlis"
+ BTL_authoritarian_monarchism:0 "Alziya"
+ BTL_authoritarian_monarchism_DEF:0 "The Alziya Culture"
+ BTL_authoritarian_monarchism_ADJ:0 "Alziya"
  BTL_republican_fascism:0 "Greater Bitlis State"
  BTL_republican_fascism_DEF:0 "Greater Bitlis State"
  BTL_republican_fascism_ADJ:0 "Bitlis"
@@ -15730,9 +15730,9 @@
  BZD_stratocratic:0 "Bayazid Military Junta"
  BZD_stratocratic_DEF:0 "Bayazid Military Junta"
  BZD_stratocratic_ADJ:0 "Bayazid"
- BZD_authoritarian_monarchism:0 "Kura-Araxes"
- BZD_authoritarian_monarchism_DEF:0 "The Kura-Araxes"
- BZD_authoritarian_monarchism_ADJ:0 "Arakid"
+ BZD_authoritarian_monarchism:0 "Urarti"
+ BZD_authoritarian_monarchism_DEF:0 "The Urarti Civilization"
+ BZD_authoritarian_monarchism_ADJ:0 "Urarti"
  BZD_republican_fascism:0 "Greater Bayazid State"
  BZD_republican_fascism_DEF:0 "Greater Bayazid State"
  BZD_republican_fascism_ADJ:0 "Bayazid"
@@ -29671,8 +29671,8 @@
  AT6_DEF:0 "The Mitaka Tribes"
  AT6_ADJ:0 "Mitaka"
 
- AT7:0 "Wanggamala Tribes"
- AT7_DEF:0 "The Wanggamala Tribes"
+ AT7:0 "Eridu"
+ AT7_DEF:0 "The City-State of Eridu"
  AT7_ADJ:0 "Wanggamala"
 
  AT8:0 "Yarluyandi Tribes"
@@ -30890,8 +30890,8 @@
  A00_DEF:0 "The Ngalea Tribes"
  A00_ADJ:0 "Ngalea"
 
- A01:0 "Warumungu Tribes"
- A01_DEF:0 "The Warumungu Tribes"
+ A01_authoritarian_monarchism:0 "Ur"
+ A01_authoritarian_monarchism_DEF:0 "The City-State of Ur"
  A01_ADJ:0 "Warumungu"
 
  A02:0 "Wakabunga Tribes"
@@ -30906,36 +30906,36 @@
  A04_DEF:0 "The Luritja Tribes"
  A04_ADJ:0 "Luritja"
 
- A05:0 "Yankuntjatjara Tribes"
- A05_DEF:0 "The Yankuntjatjara Tribes"
+ A05:0 "Uruk"
+ A05_DEF:0 "The City-State of Uruk"
  A05_ADJ:0 "Yankuntjatjara"
 
- A06:0 "Kokatha Tribes"
- A06_DEF:0 "The Kokatha Tribes"
+ A06:0 "Djemdet Nas'r"
+ A06_DEF:0 "The City-State of Djemdet"
  A06_ADJ:0 "Kokatha"
 
- A07:0 "Wirangu Tribes"
- A07_DEF:0 "The Wirangu Tribes"
+ A07:0 "Girsu"
+ A07_DEF:0 "The City-State of Girsu"
  A07_ADJ:0 "Wirangu"
 
- A08:0 "Mirning Tribes"
- A08_DEF:0 "The Mirning Tribes"
+ A08:0 "Lagash"
+ A08_DEF:0 "The City-State of Lagash"
  A08_ADJ:0 "Mirning"
 
- A09:0 "Ngarinyin Tribes"
- A09_DEF:0 "The Ngarinyin Tribes"
+ A09:0 "Umma"
+ A09_DEF:0 "The City-State of Umma"
  A09_ADJ:0 "Ngarinyin"
 
- A10:0 "Arrernte Tribes"
- A10_DEF:0 "The Arrernte Tribes"
+ A10:0 "Kish"
+ A10_DEF:0 "The City-State of Kish"
  A10_ADJ:0 "Arrernte"
 
- A11:0 "Wangkangurru Tribes"
- A11_DEF:0 "The Wangkangurru Tribes"
+ A11:0 "Nippur"
+ A11_DEF:0 "The City-State of Nippur"
  A11_ADJ:0 "Wangkangurru"
 
- A12:0 "Antakarinja Tribes"
- A12_DEF:0 "The Antakarinja Tribes"
+ A12:0 "Khafadje"
+ A12_DEF:0 "The City-State of Khafadje"
  A12_ADJ:0 "Antakarinja"
 
  A13:0 "Nana Tribes"
@@ -30978,8 +30978,8 @@
  A22_DEF:0 "The Andyamathanha Tribes"
  A22_ADJ:0 "Andyamathanha"
 
- A23:0 "Billiluna Tribes"
- A23_DEF:0 "The Billiluna Tribes"
+ A23:0 "Shuruppak"
+ A23_DEF:0 "The City-State of Shuruppak"
  A23_ADJ:0 "Billiluna"
 
  A24:0 "Nyangumarda Tribes"
@@ -41076,9 +41076,9 @@
  APC_neutrality:0 "State of Armenian Cilicia"
  APC_neutrality_DEF:0 "State of Armenian Cilicia"
  APC_neutrality_ADJ:0 "Cilician"
- APC_authoritarian_monarchism:0 "Cilician Kingdom"
- APC_authoritarian_monarchism_DEF:0 "Cilician Kingdom"
- APC_authoritarian_monarchism_ADJ:0 "Cilician"
+ APC_authoritarian_monarchism:0 "Tarhuntassa"
+ APC_authoritarian_monarchism_DEF:0 "The Tarhuntassa Culture"
+ APC_authoritarian_monarchism_ADJ:0 "Tarhuntassa"
  APC_stratocratic:0 "Cilician Military Junta"
  APC_stratocratic_DEF:0 "Cilician Military Junta"
  APC_stratocratic_ADJ:0 "Cilician"
@@ -41155,9 +41155,9 @@
  EDS_neutrality:0 "State of Edessa"
  EDS_neutrality_DEF:0 "State of Edessa"
  EDS_neutrality_ADJ:0 "Edessan"
- EDS_authoritarian_monarchism:0 "Edessan Kingdom"
- EDS_authoritarian_monarchism_DEF:0 "Edessan Kingdom"
- EDS_authoritarian_monarchism_ADJ:0 "Edessan"
+ EDS_authoritarian_monarchism:0 "Izuwa"
+ EDS_authoritarian_monarchism_DEF:0 "The Izuwa Civilization"
+ EDS_authoritarian_monarchism_ADJ:0 "Izuwa"
  EDS_stratocratic:0 "Edessan Military Junta"
  EDS_stratocratic_DEF:0 "Edessan Military Junta"
  EDS_stratocratic_ADJ:0 "Edessan"
