--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -29,8 +29,8 @@
  ENG_anocratic_monarchism_DEF:0 "The United Kingdom of the British Isles"
  ENG_neutrality:0 "British State"
  ENG_neutrality_DEF:0 "The British State"
- ENG_authoritarian_monarchism:0 "United Kingdoms of England and Scotland"
- ENG_authoritarian_monarchism_DEF:0 "The United Kingdoms of England and Scotland"
+ ENG_authoritarian_monarchism:0 ""
+ ENG_authoritarian_monarchism_DEF:0 "The Neolithic British Isles"
  ENG_stratocratic:0 "British Military Junta"
  ENG_stratocratic_DEF:0 "The British Military Junta"
  ENG_stratocratic_monarchism:0 "United Kingdom of Great Britain and Ulster"
@@ -673,10 +673,9 @@
  SWI_neutrality:0 "Swiss State"
  SWI_neutrality_DEF:0 "The Swiss State"
  SWI_neutrality_ADJ:0 "Swiss"
- SWI_authoritarian_monarchism:0 "Helvetic Principality"
- SWI_authoritarian_monarchism_DEF:0 "The Helvetic Principality"
- SWI_authoritarian_monarchism_ADJ:0 "Helvetic"
- SWI_stratocratic:0 "Swiss Military Junta"
+ SWI_authoritarian_monarchism:0 "Horgen"
+ SWI_authoritarian_monarchism_DEF:0 "The Horgen Culture"
+ SWI_authoritarian_monarchism_ADJ:0 "Horgeni
  SWI_stratocratic_DEF:0 "The Swiss Military Junta"
  SWI_stratocratic_ADJ:0 "Swiss"
  SWI_stratocratic_monarchism:0 "Grand Duchy of Switzerland"
@@ -1294,9 +1293,9 @@
  BLR_neutrality:0 "Republic of Belarus"
  BLR_neutrality_DEF:0 "The Republic of Belarus"
  BLR_neutrality_ADJ:0 "Belarusian"
- BLR_authoritarian_monarchism:0 "Kingdom of Belarus"
- BLR_authoritarian_monarchism_DEF:0 "The Kingdom of Belarus"
- BLR_authoritarian_monarchism_ADJ:0 "Belarusian"
+ BLR_authoritarian_monarchism:0 "Western Volosovo"
+ BLR_authoritarian_monarchism_DEF:0 "The Western Volosovo Culture"
+ BLR_authoritarian_monarchism_ADJ:0 "Volosovo"
  BLR_stratocratic:0 "Belarusian Military Junta"
  BLR_stratocratic_DEF:0 "The Belarusian Military Junta"
  BLR_stratocratic_ADJ:0 "Belarusian"
@@ -1513,9 +1512,9 @@
  FIN_stratocratic_monarchism:0 "Finnish White Guard"
  FIN_stratocratic_monarchism_DEF:0 "The Finnish White Guard"
  FIN_stratocratic_monarchism_ADJ:0 "Finnish"
- FIN_authoritarian_monarchism:0 "Grand Duchy of Finland"
- FIN_authoritarian_monarchism_DEF:0 "The Grand Duchy of Finland"
- FIN_authoritarian_monarchism_ADJ:0 "Finnish"
+ FIN_authoritarian_monarchism:0 "Kierikki"
+ FIN_authoritarian_monarchism_DEF:0 "The Kierikki Culture"
+ FIN_authoritarian_monarchism_ADJ:0 "Kierikki"
  FIN_monarchism:0 "Grand Duchy of Finland"
  FIN_monarchism_DEF:0 "The Grand Duchy of Finland"
  FIN_monarchism_ADJ:0 "Russo-Finnish"
@@ -1850,9 +1849,9 @@
  SWE_neutrality:0 "Swedish State"
  SWE_neutrality_DEF:0 "The Swedish State"
  SWE_neutrality_ADJ:0 "Swedish"
- SWE_authoritarian_monarchism:0 "Kalmar Kingdom of Sweden"
- SWE_authoritarian_monarchism_DEF:0 "The Kalmar Kingdom of Sweden"
- SWE_authoritarian_monarchism_ADJ:0 "Kalmar-Swedish"
+ SWE_authoritarian_monarchism:0 ""
+ SWE_authoritarian_monarchism_DEF:0 "The Neolithic Scandinavians"
+ SWE_authoritarian_monarchism_ADJ:0 "Scandii"
  SWE_stratocratic:0 "Swedish Military Junta"
  SWE_stratocratic_DEF:0 "The Swedish Military Junta"
  SWE_stratocratic_ADJ:0 "Swedish"
@@ -1921,9 +1920,9 @@
  POR_neutrality:0 "National Syndicalist State of Portugal"
  POR_neutrality_DEF:0 "The National Syndicalist State of Portugal"
  POR_neutrality_ADJ:0 "Portuguese"
- POR_authoritarian_monarchism:0 "Kingdom of Portugal and the Algarves"
- POR_authoritarian_monarchism_DEF:0 "The Kingdom of Portugal and the Algarves"
- POR_authoritarian_monarchism_ADJ:0 "Portuguese"
+ POR_authoritarian_monarchism:0 "Zambujal"
+ POR_authoritarian_monarchism_DEF:0 "The Zambujal Culture"
+ POR_authoritarian_monarchism_ADJ:0 "Zambujal"
  POR_stratocratic:0 "Portuguese Military Junta"
  POR_stratocratic_DEF:0 "The Portuguese Military Junta"
  POR_stratocratic_ADJ:0 "Portuguese"
@@ -1979,8 +1978,8 @@
  RUS_anocratic_monarchism_DEF:0 "The United Tsardom of Russia"
  RUS_neutrality:0 "Russian Provisional Government"
  RUS_neutrality_DEF:0 "The Russian Provisional Government"
- RUS_authoritarian_monarchism:0 "Russian Empire"
- RUS_authoritarian_monarchism_DEF:0 "The Russian Empire"
+ RUS_authoritarian_monarchism:0 "Eastern Volosovo"
+ RUS_authoritarian_monarchism_DEF:0 "The Eastern Volosovo Culture"
  RUS_stratocratic:0 "Russian Military Junta"
  RUS_stratocratic_DEF:0 "The Russian Military Junta"
  RUS_stratocratic_monarchism:0 "White Russia"
@@ -2289,8 +2288,8 @@
  SPR_neutrality:0 "Spanish State"
  SPR_neutrality_DEF:0 "The Spanish State"
  SPR_neutrality_ADJ:0 "Spanish"
- SPR_authoritarian_monarchism:0 "Kingdom of Spain"
- SPR_authoritarian_monarchism_DEF:0 "The Kingdom of Spain"
+ SPR_authoritarian_monarchism:0 ""
+ SPR_authoritarian_monarchism_DEF:0 "The Neolithic Iberians"
  SPR_authoritarian_monarchism_ADJ:0 "Spanish"
  SPR_stratocratic:0 "Spanish Military Junta"
  SPR_stratocratic_DEF:0 "The Spanish Military Junta"
@@ -2351,8 +2350,8 @@
  GER_anocratic_monarchism_DEF:0 "The Holy Roman Empire"
  GER_neutrality:0 "German State"
  GER_neutrality_DEF:0 "The German State"
- GER_authoritarian_monarchism:0 "German Empire"
- GER_authoritarian_monarchism_DEF:0 "The German Empire"
+ GER_authoritarian_monarchism:0 ""
+ GER_authoritarian_monarchism_DEF:0 "The Neolithic Germans"
  GER_stratocratic:0 "German Military Junta"
  GER_stratocratic_DEF:0 "The German Military Junta"
  GER_stratocratic_monarchism:0 "German Provisional Government"
@@ -2733,8 +2732,8 @@
  FRA_anocratic_monarchism_DEF:0 "The French Empire"
  FRA_neutrality:0 "Free France"
  FRA_neutrality_DEF:0 "Free France"
- FRA_authoritarian_monarchism:0 "Kingdom of France"
- FRA_authoritarian_monarchism_DEF:0 "The Kingdom of France"
+ FRA_authoritarian_monarchism:0 ""
+ FRA_authoritarian_monarchism_DEF:0 "The Neolithic Gauls"
  FRA_stratocratic:0 "French Junta"
  FRA_stratocratic_DEF:0 "The French Junta"
  FRA_stratocratic_monarchism:0 "Third French Empire"
@@ -2985,8 +2984,8 @@
  ITA_stratocratic_DEF:0 "The Italian Military Junta"
  ITA_stratocratic_monarchism:0 "United Kingdom of Italy"
  ITA_stratocratic_monarchism_DEF:0 "The United Kingdom of Italy"
- ITA_authoritarian_monarchism:0 "Kingdom of Italy"
- ITA_authoritarian_monarchism_DEF:0 "The Kingdom of Italy"
+ ITA_authoritarian_monarchism:0 ""
+ ITA_authoritarian_monarchism_DEF:0 "The Neolithic Italians"
  ITA_monarchism:0 "Italian Empire"
  ITA_monarchism_DEF:0 "The Italian Empire"
  ITA_republican_fascism:0 "Italian Fascist Republic"
@@ -4929,8 +4928,8 @@
  SYR_democratic_DEF:0 "The State of Syria"
  SYR_neutrality:0 "Syrian Arab Republic"
  SYR_neutrality_DEF:0 "The Syrian Arab Republic"
- SYR_authoritarian_monarchism:0 "Colony of Syria"
- SYR_authoritarian_monarchism_DEF:0 "The Colony of Syria"
+ SYR_authoritarian_monarchism:0 "Ebla"
+ SYR_authoritarian_monarchism_DEF:0 "The City-State of Ebla"
  SYR_stratocratic:0 "Mandate of Syria and Lebanon"
  SYR_stratocratic_DEF:0 "The Mandate of Syria and Lebanon"
  SYR_monarchism:0 "Arab Kingdom of Syria"
@@ -5127,8 +5126,8 @@
  AZR_national_socialism_DEF:0 "das Generalkommissariat Aserbeidschan"
  AZR_stratocratic_monarchism:0 "Baku Governorate"
  AZR_stratocratic_monarchism_DEF:0 "The Baku Governorate"
- AZR_authoritarian_monarchism:0 "Vilayet of Azerbaijan"
- AZR_authoritarian_monarchism_DEF:0 "The Vilayet of Azerbaijan"
+ AZR_authoritarian_monarchism:0 "Kura-Araxes"
+ AZR_authoritarian_monarchism_DEF:0 "The Kura-Araxes Culture"
  AZR_monarchism:0 "Khanate of Shirvan"
  AZR_monarchism_DEF:0 "The Khanate of Shirvan"
  AZR_liberal_republic:0 "Azeri Federation"
@@ -6621,8 +6620,8 @@
  PRE_anocratic_monarchism_DEF:0 "The Prussian Empire"
  PRE_neutrality:0 "Prussian State"
  PRE_neutrality_DEF:0 "The Prussian State"
- PRE_authoritarian_monarchism:0 "Empire of Prussia"
- PRE_authoritarian_monarchism_DEF:0 "The Empire of Prussia"
+ PRE_authoritarian_monarchism:0 "Trichterbecher"
+ PRE_authoritarian_monarchism_DEF:0 "The Trichterbecher Culture"
  PRE_stratocratic:0 "Preußischer Wehrstaat"
  PRE_stratocratic_DEF:0 "Der Preußische Wehrstaat"
  PRE_stratocratic_monarchism:0 "Prussian Provisional Government"
@@ -7538,8 +7537,8 @@
  WLL_theocratic_DEF:0 "The Empire of New Burgundy"
  WLL_ADJ:0 "Walloon"
  
- HTY_fascism:0 "Hatay State"
- HTY_fascism_DEF:0 "The Hatay State"
+ HTY_authoritarian_monarchism:0 "Amurra"
+ HTY_authoritarian_monarchism_DEF:0 "The Amurra Civilization"
  HTY_democratic:0 "Republic of Hatay"
  HTY_democratic_DEF:0 "The Republic of Hatay"
  HTY_neutrality:0 "Hatay"
@@ -7647,8 +7646,8 @@
  RHI_democratic_ADJ:0 "Rhenish"
  RHI_neutrality_ADJ:0 "Rhenish"
  RHI_communism_ADJ:0 "Rhenish"
- RHI_authoritarian_monarchism:0 "Rhine Province"
- RHI_authoritarian_monarchism_DEF:0 "The Rhine Province"
+ RHI_authoritarian_monarchism:0 ""
+ RHI_authoritarian_monarchism_DEF:0 "The Neolithic Rhine"
  RHI_authoritarian_monarchism_ADJ:0 "Rhenish"
  RHI_democratic_monarchism:0 "West German Confederation"
  RHI_democratic_monarchism_DEF:0 "West German Confederation"
@@ -8990,8 +8989,8 @@
  SIC_anocratic_monarchism_DEF:0 "The Kingdom of Syracuse"
  SIC_ADJ:0 "Sicilian"
  
- GEN_fascism:0 "Free City of Genoa"
- GEN_fascism_DEF:0 "The Free City of Genoa"
+ GEN_authoritarian_monarchism:0 "Lecchiori"
+ GEN_authoritarian_monarchism_DEF:0 "The Lecchiori Culture"
  GEN_democratic:0 "Republic of Genoa"
  GEN_democratic_DEF:0 "The Republic of Genoa"
  GEN_neutrality:0 "Duchy of Genoa"
@@ -9078,8 +9077,8 @@
  KUR_stratocratic_monarchism_DEF:0 "The British Zone of Influence within Kurdistan"
  KUR_vanguardism:0 "People's Republic of Kurdistan"
  KUR_vanguardism_DEF:0 "The People's Republic of Kurdistan"
- KUR_authoritarian_monarchism:0 "Mandate of Kurdistan"
- KUR_authoritarian_monarchism_DEF:0 "The Mandate of Kurdistan"
+ KUR_authoritarian_monarchism:0 "Mitanna"
+ KUR_authoritarian_monarchism_DEF:0 "The Mitanni Civilization"
  KUR_democratic_monarchism:0 "Kingdom of Corduene"
  KUR_democratic_monarchism_DEF:0 "The Kingdom of Corduene"
  KUR_monarchism:0 "Kingdom of Kurdistan"
@@ -10020,9 +10019,9 @@
  ARH_stratocratic:0 "West Russian Revolutionary Front"
  ARH_stratocratic_DEF:0 "The West Russian Revolutionary Front"
  ARH_stratocratic_ADJ:0 "Soviet"
- ARH_monarchism:0 "Kingdom of Arkhangelsk"
- ARH_monarchism_DEF:0 "The Kingdom of Arkhangelsk"
- ARH_monarchism_ADJ:0 "Arkhangelskian"
+ ARH_authoritarian_monarchism:0 ""
+ ARH_authoritarian_monarchism_DEF:0 "The Neolithic Eurasian Arctic"
+ ARH_authoritarian_monarchism_ADJ:0 "Eurasian"
  ARH_fascism:0 "Empire of Arhangelsk"
  ARH_fascism_DEF:0 "The Empire of Arhangelsk"
  ARH_fascism_ADJ:0 "Arkhangelskian"
@@ -12216,8 +12215,8 @@
  ADU_conservative_monarchism_DEF:0 "The Emirate of Granada"
  ADU_monarchism:0 "Caliphate Al-Andalus"
  ADU_monarchism_DEF:0 "The Caliphate Al-Andalus"
- ADU_authoritarian_monarchism:0 "British Protectorate of Andalusia"
- ADU_authoritarian_monarchism_DEF:0 "The British Protectorate of Andalusia"
+ ADU_authoritarian_monarchism:0 "Millar"
+ ADU_authoritarian_monarchism_DEF:0 "The Millaran Civilization"
  ADU_national_socialism:0 "Reichskommissariat Andalusien"
  ADU_national_socialism_DEF:0 "das Reichskommissariat Andalusien"
  ADU_stratocratic:0 "Nationalist Army of the South"
@@ -12300,8 +12299,8 @@
  COR_monarchism_DEF:0 "The Kingdom of Corsica"
  COR_stratocratic_monarchism:0 "Corsican Empire"
  COR_stratocratic_monarchism_DEF:0 "The Corsican Empire"
- COR_authoritarian_monarchism:0 "Anglo-Corsican Kingdom"
- COR_authoritarian_monarchism_DEF:0 "The Anglo-Corsican Kingdom"
+ COR_authoritarian_monarchism:0 "Ozieri"
+ COR_authoritarian_monarchism_DEF:0 "The Ozieri Culture"
  COR_ADJ:0 "Corsican"
  
  KAS_anarchism_ideology:0 "Kashmiri Tribes"
@@ -14860,8 +14859,8 @@
  SAP_communism_DEF:0 "The People's Republic of Sapmi"
  SAP_fascism:0 "Saami Empire"
  SAP_fascism_DEF:0 "The Saami Empire"
- SAP_republican_fascism:0 "Federation of the Frozen North"
- SAP_republican_fascism_DEF:0 "The Federation of the Frozen North"
+ SAP_authoritarian_monarchism:0 ""
+ SAP_authoritarian_monarchism_DEF:0 "The Neolithic Saami"
  SAP_neutrality:0 "Republic of Sapmi"
  SAP_neutrality_DEF:0 "The Republic of Sapmi"
  SAP_monarchism:0 "Kingdom of Sapmi"
@@ -16802,8 +16801,8 @@
  JEB_monarchism_DEF:0 "The Druze Sultanate"
  JEB_monarchism_ADJ:0 "Druze"
  
- ALW_democratic:0 "Alawite State"
- ALW_democratic_DEF:0 "The Alawite State"
+ ALW_authoritaria_monarchism:0 "Ugarit"
+ ALW_authoritaria_monarchism_DEF:0 "The City-State of Ugarit"
  ALW_democratic_ADJ:0 "Alawite"
  ALW_communism:0 "People's Republic of Latakia"
  ALW_communism_DEF:0 "The People's Republic of Latakia"
@@ -19948,9 +19947,9 @@
  LEI_neutrality:0 "Leinster"
  LEI_neutrality_DEF:0 "The Leinster"
  LEI_neutrality_ADJ:0 "Leinsterian"
- LEI_monarchism:0 "Kingdom of Leinster"
- LEI_monarchism_DEF:0 "The Kingdom of Leinster"
- LEI_monarchism_ADJ:0 "Leinsterian"
+ LEI_authoritarian_monarchism:0 "Ebel'aini"
+ LEI_authoritarian_monarchism_DEF:0 "The Ebel'aini Culture"
+ LEI_authoritarian_monarchism_ADJ:0 "Ebel'aini'i"
  LEI_centrist_monarchism:0 "Dominion of Southern Ireland"
  LEI_centrist_monarchism_DEF:0 "The Dominion of Southern Ireland"
  LEI_centrist_monarchism_ADJ:0 "Southern Irish"
@@ -20213,8 +20212,8 @@
  PIC_anocratic_monarchism:0 "Kingdom of France"
  PIC_anocratic_monarchism_DEF:0 "The Kingdom of France"
  PIC_anocratic_monarchism_ADJ:0 "French"
- PIC_authoritarian_monarchism:0 "Kingdom of Soissons"
- PIC_authoritarian_monarchism_DEF:0 "The Kingdom of Soissons"
+ PIC_authoritarian_monarchism:0 "Seine-Oise-Marne"
+ PIC_authoritarian_monarchism_DEF:0 "The Seine-Oise-Marne Culture"
  PIC_authoritarian_monarchism_ADJ:0 "Soissonian"
  PIC_stratocratic_monarchism:0 "German Authority of Northeastern France"
  PIC_stratocratic_monarchism_DEF:0 "The German Authority of Northeastern France"
@@ -20273,9 +20272,9 @@
  HNT_monarchism_DEF:0 "The Kingdom of Hainaut"
  HNT_monarchism_ADJ:0 "Hainautian"
  
- FRR_democratic:0 "Republic of Ferrara"
- FRR_democratic_DEF:0 "The Republic of Ferrara"
- FRR_democratic_ADJ:0 "Ferraran"
+ FRR_authoritarian_monarchism:0 "Spilamberto"
+ FRR_authoritarian_monarchism_DEF:0 "The Spilamberto Culture"
+ FRR_authoritarian_monarchism_ADJ:0 "Spilambertese"
  FRR_communism:0 "People's Republic of Ferrara"
  FRR_communism_DEF:0 "The People's Republic of Ferrara"
  FRR_communism_ADJ:0 "Ferraran"
@@ -24256,9 +24255,9 @@
  LCS_liberal_republic_DEF:0 "The Republic of Lancaster"
  LCS_ADJ:0 "Lancasterian"
 
- AQT_neutrality:0 "Aquitaine"
- AQT_neutrality_DEF:0 "The Aquitaine"
- AQT_neutrality_ADJ:0 "Aquitainian"
+ AQT_authoritarian_monarchism:0 "Artenaca"
+ AQT_authoritarian_monarchism_DEF:0 "The Artenaca Culture"
+ AQT_authoritarian_monarchism_ADJ:0 "Artenaca"
  AQT_democratic:0 "Republic of Aquitaine"
  AQT_democratic_DEF:0 "The Republic of Aquitaine"
  AQT_democratic_ADJ:0 "Aquitainian"
@@ -24388,8 +24387,8 @@
  WSX_fascism_DEF:0 "The Wessexer Empire"
  WSX_monarchism:0 "Kingdom of Wessex"
  WSX_monarchism_DEF:0 "The Kingdom of Wessex"
- WSX_authoritarian_monarchism:0 "Kingdom of Wessex"
- WSX_authoritarian_monarchism_DEF:0 "The Kingdom of Wessex"
+ WSX_authoritarian_monarchism:0 "Hengebuilders"
+ WSX_authoritarian_monarchism_DEF:0 "The Hengebuilders"
  WSX_ADJ:0 "Wessexer"
  WSX_anarchism_ideology:0 "West Saxons"
  WSX_anarchism_ideology_DEF:0 "The West Saxons"
@@ -29901,9 +29900,9 @@
  ETC_centrist_republic:0 "Republic of Mosul"
  ETC_centrist_republic_DEF:0 "The Republic of Mosul"
 
- WTC_neutrality:0 "State of West Turcomania"
- WTC_neutrality_DEF:0 "The West Turcomania"
- WTC_neutrality_ADJ:0 "Turcomanian"
+ WTC_authoritarian_monarchism:0 "Nuhassa"
+ WTC_authoritarian_monarchism_DEF:0 "The Nuhassa Civilization"
+ WTC_authoritarian_monarchism_ADJ:0 "Nuhassa"
  WTC_monarchism:0 "Kingdom of West Turcomania"
  WTC_monarchism_DEF:0 "The Kingdom of West Turcomania"
  WTC_monarchism_ADJ:0 "Turcomanian"
