--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -4110,8 +4110,8 @@
  CAT_conservative_monarchism_DEF:0 "the Generalitat of Catalonia"
  CAT_neutrality:0 "Respublica Romana Tarraconensis"
  CAT_neutrality_DEF:0 "the Catalan State"
- CAT_authoritarian_monarchism:0 "Kingdom of Catalonia"
- CAT_authoritarian_monarchism_DEF:0 "the Kingdom of Catalonia"
+ CAT_authoritarian_monarchism:0 "Veraza"
+ CAT_authoritarian_monarchism_DEF:0 "The Veraza Culture"
  CAT_stratocratic:0 "Catalan Junta"
  CAT_stratocratic_DEF:0 "the Catalan Junta"
  CAT_monarchism:0 "Habsburg Kingdom of Spain"
@@ -5507,9 +5507,9 @@
  TEK_stratocratic:0 "Tekian Military Junta"
  TEK_stratocratic_DEF:0 "Tekian Military Junta"
  TEK_stratocratic_ADJ:0 "Tekian"
- TEK_authoritarian_monarchism:0 "Kingdom of Teke"
- TEK_authoritarian_monarchism_DEF:0 "Kingdom of Teke"
- TEK_authoritarian_monarchism_ADJ:0 "Tekian"
+ TEK_authoritarian_monarchism:0 "Lukki"
+ TEK_authoritarian_monarchism_DEF:0 "The Lukki Civilization"
+ TEK_authoritarian_monarchism_ADJ:0 "Lukkian"
  TEK_republican_fascism:0 "Tekian State"
  TEK_republican_fascism_DEF:0 "Tekian State"
  TEK_republican_fascism_ADJ:0 "Tekian"
@@ -7828,8 +7828,8 @@
  YLN_stratocratic_monarchism_DEF:0 "Kingdom of Yulin"
  YLN_stratocratic_monarchism_ADJ:0 "Yulin"
  
- OSS_democratic:0 "Republic of Ossetia"
- OSS_democratic_DEF:0 "The Republic of Ossetia"
+ OSS_authoritarian_monarchism:0 "Maykop"
+ OSS_authoritarian_monarchism_DEF:0 "The Maykop Culture"
  OSS_democratic_monarchism:0 "Kingdom of Kakheti"
  OSS_democratic_monarchism_DEF:0 "The Kingdom of Kakheti"
  OSS_communism:0 "People's Union of Ossetia"
